BJS2-40813 Task
Added LikeController and LikeService.

With Tests (version 17.0)